objects/Publication_Item__c.object
<CustomObject>
    <description>Publications related to a Campaign.</description>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Publication Items</relationshipLabel>
        <relationshipName>Publication_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DERF__c</fullName>
        <formula>Publication__r.DERF__c</formula>
        <label>DERF</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Publication</label>
        <referenceTo>Publication__c</referenceTo>
        <relationshipLabel>Publication Items</relationshipLabel>
        <relationshipName>Publication_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stock_Num__c</fullName>
        <formula>Publication__r.Stock_Num__c</formula>
        <label>Stock #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>Publication__r.Title__c</formula>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <label>Publication Item</label>
    <nameField>
        <displayFormat>PI-{000000}</displayFormat>
        <label>Publication Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Publication Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>